--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,23 +30,23 @@ jobs:
 
     - name: Get p4api
       run: |
-        mkdir -p ${{ bindir }}
-        dir  ${{ bindir }}
+        mkdir -p $bindir
+        dir  $bindir
         dir ..
         dir 
         pwd
-        cd .. && wget ftp://ftp.perforce.com/perforce/$codeline/bin.linux26x86_64/${{ p4api }} -O ${{ bindir }}/${{ p4api }}
+        cd .. && wget ftp://ftp.perforce.com/perforce/$codeline/bin.linux26x86_64/$p4api -O $bindir/$p4api
         
     - name: Get p4 and p4d binary
       run: |
-        wget ftp://ftp.perforce.com/perforce/$codeline/bin.linux26x86_64/p4d -O ${{ bindir }}/p4d && chmod 775 ${{ bindir }}/p4d
+        wget ftp://ftp.perforce.com/perforce/$codeline/bin.linux26x86_64/p4d -O $bindir/p4d && chmod 775 $bindir/p4d
     - name: Build P4Python
       run: |
-        docker pull ${{ docker }}
+        docker pull $docker
         docker run \
-        -v ${{ mount }} \        
-        ${{ docker }} /work/p4-python/linux_build/build-wheels.sh "27 36 37 38 39"
-        dir  ${{ bindir }}
+        -v $mount \        
+        $docker /work/p4-python/linux_build/build-wheels.sh "27 36 37 38 39"
+        dir  $bindir
 
     - uses: actions/upload-artifact@v2
       with:
