WIP p4python actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
         ls ${{ github.workspace }}/..
 
 
-        docker run -v $mount $docker /work/p4-python/linux_build/build-wheels.sh \"27 36 37 38 39\"
+        docker run -v $mount $docker /work/p4-python/linux_build/build-wheels.sh 36
         dir  $bindir
 
     - uses: actions/upload-artifact@v2
