--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,3 +64,7 @@ jobs:
       with:
         name: non-production-p4python
         path: $bindir/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+
+    - name: dir_bindir
+      run: |
+        ls $bindir
