WIP p4python actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,12 +58,13 @@ jobs:
 
         docker run -v $mount $docker /work/p4-python/linux_build/build-wheels.sh ${{ matrix.pyver }}
         cp ../p4-python/repair/p4python-*.whl $bindir/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
-        dir  $bindir
+        cd $bindir
+        tar -cf p4python-cp${{ matrix.pyver }}.tar p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
 
     - uses: actions/upload-artifact@v2
       with:
         name: non-production-p4python
-        path: $bindir/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+        path: $bindir/p4python-cp${{ matrix.pyver }}.tar
 
     - name: dir_bindir
       run: |
