--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: non-production-p4python-cp${{ matrix.pyver }}
-        path: ../p4-bin/bin.linux26x86_64/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+        path: ${{ github.workspace }}/../p4-bin/bin.linux26x86_64/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
 
     - name: dir_bindir
       run: |
