--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,14 +57,13 @@ jobs:
 
 
         docker run -v $mount $docker /work/p4-python/linux_build/build-wheels.sh ${{ matrix.pyver }}
-        cp ../p4-python/repair/p4python-*.whl $bindir/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
-        cd $bindir
-        tar -cf p4python-cp${{ matrix.pyver }}.tar p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+        cp ../p4-python/repair/p4python-*.whl ${{ github.workspace }}/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+
 
     - uses: actions/upload-artifact@v2
       with:
         name: non-production-p4python-cp${{ matrix.pyver }}
-        path: ${{ github.workspace }}/../p4-bin/bin.linux26x86_64/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
+        path: ${{ github.workspace }}/p4python-cp${{ matrix.pyver }}-manylinux2010_x86_64.whl
 
     - name: dir_bindir
       run: |
